[gd_scene load_steps=8 format=2]

[ext_resource path="res://gamefiles/scripts/Music_manager.gd" type="Script" id=1]
[ext_resource path="res://resources/01/sound/jump001.wav" type="AudioStream" id=2]
[ext_resource path="res://resources/01/sound/death001.wav" type="AudioStream" id=3]
[ext_resource path="res://resources/01/sound/slide001.wav" type="AudioStream" id=4]
[ext_resource path="res://resources/01/sound/theme01.wav" type="AudioStream" id=5]
[ext_resource path="res://resources/01/sound/theme02.wav" type="AudioStream" id=6]
[ext_resource path="res://resources/01/sound/theme03.wav" type="AudioStream" id=7]

[node name="MusicManager" type="Node2D"]
script = ExtResource( 1 )

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Slide" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Theme1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Theme2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Theme3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
